--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,11 @@
 body {
     font-size: 1rem;
     font-family: 'Montserrat';
+    background-color:rgb(254, 223, 198)
 }
 
 header {
-    background-color: #ffffff;
+    background-color: #c9c9c9;
 }
 
 
@@ -102,7 +103,7 @@ h2 {
 }
 
 #galeria {
-    background-color: #FAF4F4;
+    background-color: rgb(254, 223, 198);
 
 }
 
